# MusicSearch-v1

./: .gitignore  README.md  musicsearch-tk-v1.1.py  musicsearch-tk-v1.2.py  musicsearch-tk-v1.3.py  musicsearch-tk-v1.4.py  musicsearch-v1.0.py
Documentation/: music-search.ipynb  musicsearch-v1.ipynb  tk-object.ipynb
Documentation/MusicSearch-1/: musicsearch-01.md  musicsearch-02.md
Documentation/tk-oop-basic/: after-mainloop.md  tk-oop-window.ipynb  window.py
musicsearch-tk-project-v1.5/: .gitignore  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
musicsearch-tk-project-v1.5/docs/: README.md
musicsearch-tk-project-v1.5/src/music_search/: __init__.py  config.py
musicsearch-tk-project-v1.5/src/music_search/api/: __init__.py  itunes.py
musicsearch-tk-project-v1.5/src/music_search/gui/: __init__.py  main.py
musicsearch-tk-project-v1.5/src/music_search/utils/: __init__.py  constants.py
musicsearch-tk-project-v1.5/tests/: __init__.py  test_api.py
